--- a/StudentArchitect/src/app/header/header.component.css
+++ b/StudentArchitect/src/app/header/header.component.css
@@ -1,23 +1,3 @@
-
-nav a {
-    padding: 5px 10px;
-    text-decoration: none;
-    margin-top: 10px;
-    display: inline-block;
-    background-color: #eee;
-    border-radius: 4px;
-  }
-  nav a:visited, a:link {
-    color: #607d8b;
-  }
-  nav a:hover {
-    color: #039be5;
-    background-color: #cfd8dc;
-  }
-  nav a.active {
-    color: #039be5;
-  }
- 
   /* Add a black background color to the top navigation */
 .topnav {
   /* Keeping for future use */
@@ -33,11 +13,9 @@ text-align: center;
 padding: 14px 16px;
 text-decoration: none;
 font-size: 17px;
+cursor: pointer;
 }
 
-img {
- float: left;
-}
 /* Change the color of links on hover */
 .topnav a:hover {
 background-color: #eee;
