--- a/StudentArchitect/src/app/pricing/pricing.component.html
+++ b/StudentArchitect/src/app/pricing/pricing.component.html
@@ -11,7 +11,14 @@
             <div class="total-price">15,000</div>
             <div class="total-months">For 10 months</div>
           </div>
-          <div>3</div>
+          <div class="course-timeline">
+             <div class="course-timeline-one">
+                Up To Apr 2019
+            </div>
+             <div class="course-timeline-two">
+               For Class 8
+             </div>
+          </div>
       </div>
   </div>
   <div class="two">Two</div>
