--- a/StudentArchitect/src/app/pricing/pricing.component.html
+++ b/StudentArchitect/src/app/pricing/pricing.component.html
@@ -1,6 +1,7 @@
 <div class="box">
   <div class="one">
-      <div class="pricing-detail">
+      
+    <div class="pricing-detail">
           <div class="course-type-heading"> 
             <div>
               <h3>Basic</h3>
@@ -19,6 +20,12 @@
                For Class 8
              </div>
           </div>
+      </div>
+
+      <div class="ltd">
+        <div class="learn opa">
+
+        </div>
       </div>
   </div>
   <div class="two">Two</div>
