--- a/StudentArchitect/src/app/pricing/pricing.component.css
+++ b/StudentArchitect/src/app/pricing/pricing.component.css
@@ -9,7 +9,7 @@
   .one {
     flex: 1 1 auto;
     margin: 10px;
-    background: whitesmoke;
+    /* background: whitesmoke; */
     border-radius: 10px;
   }
 
@@ -44,10 +44,12 @@
     padding-bottom: 15px;
     min-height: 55px;
     font-size: 12px;
+    background-color: darkred;
   }
 
   .total-price-detail{
     background-color:rgb(165, 32, 32);
+    padding: 15px 25px 15px 15px;
   }
 
   .total-price{
@@ -89,4 +91,9 @@
     font-weight: 600;
     color: #695b5b;
     opacity: .7;
+  }
+
+  .ltd{
+    padding-bottom: 15px;
+    background-color: floralwhite;
   }
