--- a/StudentArchitect/src/app/pricing/pricing.component.html
+++ b/StudentArchitect/src/app/pricing/pricing.component.html
@@ -1,12 +1,11 @@
 <div class="box">
-  <div class="one">
+  <div class="one one-bg">
       
-    <div class="pricing-detail">
+    <div class="pricing-detail pricing-detail-basic-bg">
           <div class="course-type-heading"> 
-            <div>
-              <h3>Basic</h3>
-            </div>
-            <div> <strong>1500</strong>/month</div>
+            <div class="course-type-heading-bg"></div>
+            <h3 class="course-type">Basic</h3>
+            <div class="course-cost"> <strong>1500</strong>/month</div>
           </div>
           <div class="total-price-detail">
             <div class="total-price">15,000</div>
@@ -23,11 +22,159 @@
       </div>
 
       <div class="ltd">
+       
+        <!--Learn-->
         <div class="learn opa">
-
+          <div class="">
+            <svg fill="currentColor" preserveAspectRatio="xMidYMid meet" height="14" width="14" viewBox="0 0 13 11"><path d="M1.989.502c1.085.003 3.059.256 4.086 1.92a.45.45 0 0 1 .064.238v7.347C4.887 8.689 3.073 8.46 1.99 8.459a.468.468 0 0 1-.465-.468V.97a.468.468 0 0 1 .464-.469zm9.486 7.489a.468.468 0 0 1-.465.468c-1.083.002-2.897.23-4.149 1.548V2.66a.45.45 0 0 1 .064-.237C7.952.758 9.926.505 11.011.503h.002a.468.468 0 0 1 .463.468v7.02zm1.06-5.87c.256 0 .465.21.465.468v7.44a.467.467 0 0 1-.57.457c-1.114-.256-3.07-.553-4.924-.096 1.072-1.021 2.587-1.202 3.505-1.204a1.194 1.194 0 0 0 1.187-1.195V2.12h.337zM.802 7.991c0 .657.533 1.193 1.187 1.195.918.002 2.432.183 3.505 1.204-1.855-.457-3.81-.16-4.925.096A.467.467 0 0 1 0 10.03l.001-7.44c0-.259.209-.469.465-.469h.337v5.87z" fill="currentColor"></path></svg>
+          </div>
+          <div class="learn-detail">
+            <p class="learn-text">Learn</p>
+            <p class="learn-desc">Unlimited access of video of selected subjects.</p>
+          </div>
         </div>
+        
+        <!--Test-->
+        <div class="learn">
+          <div>
+              <svg fill="currentColor" preserveAspectRatio="xMidYMid meet" height="14" width="14" viewBox="0 0 17 20"><path d="M2.525 6.007v2.089h-.14C1.512 8.096.8 8.806.8 9.68v8.733C.8 19.29 1.511 20 2.386 20h12.186c.875 0 1.586-.711 1.586-1.586V9.677c0-.874-.711-1.585-1.586-1.585h-.04V6.003A6.01 6.01 0 0 0 8.527 0a6.016 6.016 0 0 0-6.003 6.007zm6.894 8.427c-.123.09-.156.176-.156.319.005.641.005 1.279.005 1.92a.683.683 0 0 1-.36.646c-.56.286-1.12-.114-1.12-.646v-.004c0-.641 0-1.283.004-1.924 0-.131-.028-.217-.143-.303a1.463 1.463 0 0 1-.482-1.802c.282-.625.973-.993 1.622-.862.724.147 1.226.727 1.235 1.45 0 .503-.2.912-.605 1.206zM5.152 6.007a3.38 3.38 0 0 1 3.376-3.375 3.38 3.38 0 0 1 3.375 3.375v2.089h-6.75V6.007z" fill="#000" fill-rule="nonzero"></path></svg>
+          </div>
+          <div>
+              <p class="learn-text">Test</p>
+              <p class="learn-desc">Access to test module and test report.</p>
+          </div>
+        </div>
+
+        <!--Doubts-->
+        <div class="learn">
+            <div>
+                <svg fill="currentColor" preserveAspectRatio="xMidYMid meet" height="14" width="14" viewBox="0 0 17 20"><path d="M2.525 6.007v2.089h-.14C1.512 8.096.8 8.806.8 9.68v8.733C.8 19.29 1.511 20 2.386 20h12.186c.875 0 1.586-.711 1.586-1.586V9.677c0-.874-.711-1.585-1.586-1.585h-.04V6.003A6.01 6.01 0 0 0 8.527 0a6.016 6.016 0 0 0-6.003 6.007zm6.894 8.427c-.123.09-.156.176-.156.319.005.641.005 1.279.005 1.92a.683.683 0 0 1-.36.646c-.56.286-1.12-.114-1.12-.646v-.004c0-.641 0-1.283.004-1.924 0-.131-.028-.217-.143-.303a1.463 1.463 0 0 1-.482-1.802c.282-.625.973-.993 1.622-.862.724.147 1.226.727 1.235 1.45 0 .503-.2.912-.605 1.206zM5.152 6.007a3.38 3.38 0 0 1 3.376-3.375 3.38 3.38 0 0 1 3.375 3.375v2.089h-6.75V6.007z" fill="#000" fill-rule="nonzero"></path></svg>
+            </div>
+            <div>
+                <p class="learn-text">Doubts</p>
+                <p class="learn-desc">Get your doubt solved.</p>
+            </div>
+          </div>
+      </div>
+
+
+  </div>
+
+
+  <div class="two">
+      <div class="pricing-detail pricing-detail-adv-bg">
+          <div class="course-type-heading"> 
+            <div class="course-type-heading-bg course-type-heading-adv-bg"></div>
+            <h3 class="course-type">Advance</h3>
+            <div class="course-cost"> <strong>3000</strong>/month</div>
+          </div>
+          <div class="total-price-detail">
+            <div class="total-price">30,000</div>
+            <div class="total-months">For 10 months</div>
+          </div>
+          <div class="course-timeline">
+             <div class="course-timeline-one">
+                Up To Apr 2019
+            </div>
+             <div class="course-timeline-two">
+               For Class 8
+             </div>
+          </div>
+      </div>
+
+      <div class="ltd">
+       
+        <!--Learn-->
+        <div class="learn opa">
+          <div class="">
+            <svg fill="currentColor" preserveAspectRatio="xMidYMid meet" height="14" width="14" viewBox="0 0 13 11"><path d="M1.989.502c1.085.003 3.059.256 4.086 1.92a.45.45 0 0 1 .064.238v7.347C4.887 8.689 3.073 8.46 1.99 8.459a.468.468 0 0 1-.465-.468V.97a.468.468 0 0 1 .464-.469zm9.486 7.489a.468.468 0 0 1-.465.468c-1.083.002-2.897.23-4.149 1.548V2.66a.45.45 0 0 1 .064-.237C7.952.758 9.926.505 11.011.503h.002a.468.468 0 0 1 .463.468v7.02zm1.06-5.87c.256 0 .465.21.465.468v7.44a.467.467 0 0 1-.57.457c-1.114-.256-3.07-.553-4.924-.096 1.072-1.021 2.587-1.202 3.505-1.204a1.194 1.194 0 0 0 1.187-1.195V2.12h.337zM.802 7.991c0 .657.533 1.193 1.187 1.195.918.002 2.432.183 3.505 1.204-1.855-.457-3.81-.16-4.925.096A.467.467 0 0 1 0 10.03l.001-7.44c0-.259.209-.469.465-.469h.337v5.87z" fill="currentColor"></path></svg>
+          </div>
+          <div class="learn-detail">
+            <p class="learn-text">Learn</p>
+            <p class="learn-desc">Unlimited access of video of selected subjects.</p>
+          </div>
+        </div>
+        
+        <!--Test-->
+        <div class="learn opa">
+          <div>
+              <svg fill="currentColor" preserveAspectRatio="xMidYMid meet" height="14" width="14" viewBox="0 0 17 20"><path d="M2.525 6.007v2.089h-.14C1.512 8.096.8 8.806.8 9.68v8.733C.8 19.29 1.511 20 2.386 20h12.186c.875 0 1.586-.711 1.586-1.586V9.677c0-.874-.711-1.585-1.586-1.585h-.04V6.003A6.01 6.01 0 0 0 8.527 0a6.016 6.016 0 0 0-6.003 6.007zm6.894 8.427c-.123.09-.156.176-.156.319.005.641.005 1.279.005 1.92a.683.683 0 0 1-.36.646c-.56.286-1.12-.114-1.12-.646v-.004c0-.641 0-1.283.004-1.924 0-.131-.028-.217-.143-.303a1.463 1.463 0 0 1-.482-1.802c.282-.625.973-.993 1.622-.862.724.147 1.226.727 1.235 1.45 0 .503-.2.912-.605 1.206zM5.152 6.007a3.38 3.38 0 0 1 3.376-3.375 3.38 3.38 0 0 1 3.375 3.375v2.089h-6.75V6.007z" fill="#000" fill-rule="nonzero"></path></svg>
+          </div>
+          <div>
+              <p class="learn-text">Test</p>
+              <p class="learn-desc">Access to test module and test report.</p>
+          </div>
+        </div>
+
+        <!--Doubts-->
+        <div class="learn">
+            <div>
+                <svg fill="currentColor" preserveAspectRatio="xMidYMid meet" height="14" width="14" viewBox="0 0 17 20"><path d="M2.525 6.007v2.089h-.14C1.512 8.096.8 8.806.8 9.68v8.733C.8 19.29 1.511 20 2.386 20h12.186c.875 0 1.586-.711 1.586-1.586V9.677c0-.874-.711-1.585-1.586-1.585h-.04V6.003A6.01 6.01 0 0 0 8.527 0a6.016 6.016 0 0 0-6.003 6.007zm6.894 8.427c-.123.09-.156.176-.156.319.005.641.005 1.279.005 1.92a.683.683 0 0 1-.36.646c-.56.286-1.12-.114-1.12-.646v-.004c0-.641 0-1.283.004-1.924 0-.131-.028-.217-.143-.303a1.463 1.463 0 0 1-.482-1.802c.282-.625.973-.993 1.622-.862.724.147 1.226.727 1.235 1.45 0 .503-.2.912-.605 1.206zM5.152 6.007a3.38 3.38 0 0 1 3.376-3.375 3.38 3.38 0 0 1 3.375 3.375v2.089h-6.75V6.007z" fill="#000" fill-rule="nonzero"></path></svg>
+            </div>
+            <div>
+                <p class="learn-text">Doubts</p>
+                <p class="learn-desc">Get your doubt solved.</p>
+            </div>
+          </div>
       </div>
   </div>
-  <div class="two">Two</div>
-  <div class="three">Three</div>
+
+  <!--Custom-->
+  <div class="three">
+      <div class="pricing-detail pricing-detail-cus-bg">
+          <div class="course-type-heading"> 
+            <div class="course-type-heading-bg course-type-heading-cus-bg"></div>
+            <h3 class="course-type">Custom</h3>
+            <div class="course-cost"> <strong>1500</strong>/month</div>
+          </div>
+          <div class="total-price-detail">
+            <div class="total-price">15,000</div>
+            <div class="total-months">For 10 months</div>
+          </div>
+          <div class="course-timeline">
+             <div class="course-timeline-one">
+                Up To Apr 2019
+            </div>
+             <div class="course-timeline-two">
+               For Class 8
+             </div>
+          </div>
+      </div>
+
+      <div class="ltd">
+       
+        <!--Learn-->
+        <div class="learn opa">
+          <div class="">
+            <svg fill="currentColor" preserveAspectRatio="xMidYMid meet" height="14" width="14" viewBox="0 0 13 11"><path d="M1.989.502c1.085.003 3.059.256 4.086 1.92a.45.45 0 0 1 .064.238v7.347C4.887 8.689 3.073 8.46 1.99 8.459a.468.468 0 0 1-.465-.468V.97a.468.468 0 0 1 .464-.469zm9.486 7.489a.468.468 0 0 1-.465.468c-1.083.002-2.897.23-4.149 1.548V2.66a.45.45 0 0 1 .064-.237C7.952.758 9.926.505 11.011.503h.002a.468.468 0 0 1 .463.468v7.02zm1.06-5.87c.256 0 .465.21.465.468v7.44a.467.467 0 0 1-.57.457c-1.114-.256-3.07-.553-4.924-.096 1.072-1.021 2.587-1.202 3.505-1.204a1.194 1.194 0 0 0 1.187-1.195V2.12h.337zM.802 7.991c0 .657.533 1.193 1.187 1.195.918.002 2.432.183 3.505 1.204-1.855-.457-3.81-.16-4.925.096A.467.467 0 0 1 0 10.03l.001-7.44c0-.259.209-.469.465-.469h.337v5.87z" fill="currentColor"></path></svg>
+          </div>
+          <div class="learn-detail">
+            <p class="learn-text">Learn</p>
+            <p class="learn-desc">Unlimited access of video of selected subjects.</p>
+          </div>
+        </div>
+        
+        <!--Test-->
+        <div class="learn opa">
+          <div>
+              <svg fill="currentColor" preserveAspectRatio="xMidYMid meet" height="14" width="14" viewBox="0 0 17 20"><path d="M2.525 6.007v2.089h-.14C1.512 8.096.8 8.806.8 9.68v8.733C.8 19.29 1.511 20 2.386 20h12.186c.875 0 1.586-.711 1.586-1.586V9.677c0-.874-.711-1.585-1.586-1.585h-.04V6.003A6.01 6.01 0 0 0 8.527 0a6.016 6.016 0 0 0-6.003 6.007zm6.894 8.427c-.123.09-.156.176-.156.319.005.641.005 1.279.005 1.92a.683.683 0 0 1-.36.646c-.56.286-1.12-.114-1.12-.646v-.004c0-.641 0-1.283.004-1.924 0-.131-.028-.217-.143-.303a1.463 1.463 0 0 1-.482-1.802c.282-.625.973-.993 1.622-.862.724.147 1.226.727 1.235 1.45 0 .503-.2.912-.605 1.206zM5.152 6.007a3.38 3.38 0 0 1 3.376-3.375 3.38 3.38 0 0 1 3.375 3.375v2.089h-6.75V6.007z" fill="#000" fill-rule="nonzero"></path></svg>
+          </div>
+          <div>
+              <p class="learn-text">Test</p>
+              <p class="learn-desc">Access to test module and test report.</p>
+          </div>
+        </div>
+
+        <!--Doubts-->
+        <div class="learn opa">
+            <div>
+                <svg fill="currentColor" preserveAspectRatio="xMidYMid meet" height="14" width="14" viewBox="0 0 17 20"><path d="M2.525 6.007v2.089h-.14C1.512 8.096.8 8.806.8 9.68v8.733C.8 19.29 1.511 20 2.386 20h12.186c.875 0 1.586-.711 1.586-1.586V9.677c0-.874-.711-1.585-1.586-1.585h-.04V6.003A6.01 6.01 0 0 0 8.527 0a6.016 6.016 0 0 0-6.003 6.007zm6.894 8.427c-.123.09-.156.176-.156.319.005.641.005 1.279.005 1.92a.683.683 0 0 1-.36.646c-.56.286-1.12-.114-1.12-.646v-.004c0-.641 0-1.283.004-1.924 0-.131-.028-.217-.143-.303a1.463 1.463 0 0 1-.482-1.802c.282-.625.973-.993 1.622-.862.724.147 1.226.727 1.235 1.45 0 .503-.2.912-.605 1.206zM5.152 6.007a3.38 3.38 0 0 1 3.376-3.375 3.38 3.38 0 0 1 3.375 3.375v2.089h-6.75V6.007z" fill="#000" fill-rule="nonzero"></path></svg>
+            </div>
+            <div>
+                <p class="learn-text">Doubts</p>
+                <p class="learn-desc">Get your doubt solved.</p>
+            </div>
+          </div>
+      </div>
+  </div>
 </div>
