--- a/StudentArchitect/src/styles.css
+++ b/StudentArchitect/src/styles.css
@@ -4,3 +4,14 @@ body, html {
     height: 100%;
     margin: 0;
 }
+
+html {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  *, *:before, *:after {
+    -webkit-box-sizing: inherit;
+    -moz-box-sizing: inherit;
+    box-sizing: inherit;
+    }
