created class component

--- a/StudentArchitect/src/app/header/header.component.html
+++ b/StudentArchitect/src/app/header/header.component.html
@@ -4,7 +4,7 @@
         <a routerLink="/home" title="Student Architect">
           <img height="55" src="assets/images/logo.jpeg" alt="Student Architect">
         </a>
-      <a routerLink="/classes">Classes</a>
+      <a routerLink="/class">Classes</a>
       <a routerLink="/pricing">Pricing</a>
       <a routerLink="/why_sa">Why SA?</a>
     </div>
