--- a/StudentArchitect/src/app/app.component.css
+++ b/StudentArchitect/src/app/app.component.css
@@ -6,5 +6,18 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+
+    /* Set rules to fill background */
+  min-height: 100%;
+  /* min-width: 1024px; */
+	
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+	
+  /* Set up positioning */
+  /* position: fixed; */
+  top: 0;
+  left: 0;
 }
 
