initial class layout

--- a/StudentArchitect/src/app/class/class.component.html
+++ b/StudentArchitect/src/app/class/class.component.html
@@ -1,3 +1,4 @@
-<p>
-  class works!
-</p>
+<div class="class-container">
+  <div class="left_nav">left navigation</div>
+  <div class="right_nav">Right navigation</div>
+</div>
