--- a/StudentArchitect/src/app/header/header.component.html
+++ b/StudentArchitect/src/app/header/header.component.html
@@ -1,8 +1,8 @@
   <div class="topnav">
     
     <div class="topnav-left">
-        <a routerLink="/home" title="Student Architect">
-          <img height="55" src="assets/images/logo.jpeg" alt="Student Architect">
+        <a routerLink="/home" title="Student Architect">Home
+          <!-- <img height="55" src="assets/images/logo.jpeg" alt="Student Architect"> -->
         </a>
       <a routerLink="/class">Classes</a>
       <a routerLink="/pricing">Pricing</a>
