claas subject grid

--- a/StudentArchitect/src/app/class/class.component.html
+++ b/StudentArchitect/src/app/class/class.component.html
@@ -1,4 +1,20 @@
 <div class="class-container">
   <div class="left_nav">left navigation</div>
-  <div class="right_nav">Right navigation</div>
+  <div class="right_nav">
+    <div class="subject-grid">
+      <div class="subject">Vikash</div>
+      <div>ankit</div>
+      <div>Vikash</div>
+      <div>ankit</div>
+      <div>Vikash</div>
+      <div>ankit</div>
+
+      <div>Vikash</div>
+      <div>ankit</div>
+      <div>Vikash</div>
+      <div>ankit</div>
+      <div>Vikash</div>
+      <div>ankit</div>
+    </div>
+  </div>
 </div>
