--- a/StudentArchitect/src/app/class/class.component.css
+++ b/StudentArchitect/src/app/class/class.component.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     min-width: 100%;
-    min-height: 100vh;
+    min-height: calc(100vh - 53px);
     background: whitesmoke;
 }
 
@@ -14,6 +14,13 @@
 
 .right_nav{
 position: relative;
-/* height: 100vh; */
+min-height: 100%;
+min-width: 100%;
 overflow-y: auto;
+padding: 60px 80px;
+}
+
+.subject-grid{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
 }
