left nav initial implementation

--- a/StudentArchitect/src/app/class/class.component.css
+++ b/StudentArchitect/src/app/class/class.component.css
@@ -7,9 +7,13 @@
 }
 
 .left_nav{
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
     min-height: 100%;
-    min-width: 150px;
+    min-width: 200px;
     border-right: solid;
+    align-items: flex-start;
 }
 
 .right_nav{
@@ -17,3 +21,87 @@ position: relative;
 /* height: 100vh; */
 overflow-y: auto;
 }
+
+.leftnav_content {
+    display: flex;
+    align-items: center;
+}
+ .leftnav_icons {
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    padding: 8px;
+    margin: 10px;
+    background-color: #55bbea;
+}
+
+/* For Styled Check-boxes */
+.styled-checkbox {
+    position: absolute;
+    opacity: 0;
+  }
+  .styled-checkbox + label {
+    position: relative;
+    cursor: pointer;
+    padding: 0;
+  }
+  .styled-checkbox + label:before {
+    content: "";
+    margin-right: 10px;
+    display: inline-block;
+    vertical-align: text-top;
+    width: 20px;
+    height: 20px;
+    background: white;
+  }
+  .styled-checkbox:hover + label:before {
+    background: #f35429;
+  }
+  .styled-checkbox:focus + label:before {
+    box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.12);
+  }
+  .styled-checkbox:checked + label:before {
+    background: #f35429;
+  }
+  .styled-checkbox:disabled + label {
+    color: #b8b8b8;
+    cursor: auto;
+  }
+  .styled-checkbox:disabled + label:before {
+    box-shadow: none;
+    background: #ddd;
+  }
+  .styled-checkbox:checked + label:after {
+    content: "";
+    position: absolute;
+    left: 5px;
+    top: 9px;
+    background: white;
+    width: 2px;
+    height: 2px;
+    box-shadow: 2px 0 0 white, 4px 0 0 white, 4px -2px 0 white, 4px -4px 0 white, 4px -6px 0 white, 4px -8px 0 white;
+    -webkit-transform: rotate(45deg);
+            transform: rotate(45deg);
+  }
+
+  .unstyled {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+  }
+  
+  li {
+    margin: 20px 0;
+  }
+  
+  .centered {
+    width: 300px;
+    margin: auto;
+  }
+  
+  .title {
+    text-align: center;
+    color: #4571ec;
+  }
+  
