--- a/StudentArchitect/src/app/class/class.component.html
+++ b/StudentArchitect/src/app/class/class.component.html
@@ -1,4 +1,63 @@
 <div class="class-container">
-  <div class="left_nav">left navigation</div>
+  <div class="left_nav">
+    <div class="leftnav_content" title="Select Board">
+      <div class="leftnav_icons">
+        <svg fill="currentColor" preserveAspectRatio="xMidYMid meet" height="20" width="18" viewBox="0 0 17 18">
+          <g fill="#000" fill-rule="nonzero">
+            <path d="M16.914 15.183l-2.08-4.427a7.694 7.694 0 0 1-5.016 3.2l1.74 3.706a.593.593 0 0 0 1.091-.048l.892-2.433.184-.085 2.451.886c.492.18.96-.327.738-.8zM8.5 0C4.916 0 2 2.894 2 6.452c0 3.557 2.916 6.451 6.5 6.451S15 10.01 15 6.452C15 2.894 12.084 0 8.5 0zm3.163 5.978L10.51 7.093l.272 1.575c.084.481-.427.842-.857.618L8.5 8.543l-1.425.743a.59.59 0 0 1-.857-.618l.272-1.575-1.152-1.115a.586.586 0 0 1 .327-1l1.593-.23.712-1.433a.593.593 0 0 1 1.06 0l.712 1.433 1.593.23c.483.069.678.66.328 1zM2.166 10.756l-2.08 4.427c-.223.474.25.978.738.799l2.45-.886.185.085.892 2.433a.593.593 0 0 0 1.09.048l1.741-3.706a7.694 7.694 0 0 1-5.016-3.2z"></path>
+          </g>
+        </svg>
+      </div>
+      <div class="board_text">
+        <select id="leftnav_select">
+          <option value="cbse">CBSE</option>
+        </select>
+      </div>
+    </div>
+    <div class="leftnav_content">
+      <div class="leftnav_icons">
+        <svg fill="currentColor" preserveAspectRatio="xMidYMid meet" height="20" width="20" viewBox="0 0 18 13">
+          <g fill="#000" fill-rule="nonzero">
+            <path d="M15.8 5.605L9.17 8.056 2.543 5.641l-.378 3.353a.438.438 0 0 0 .134.373.47.47 0 0 0 .388.123 7.911 7.911 0 0 1 1.103-.077c2.203 0 4.174.905 4.905 2.251.08.147.236.238.406.238h.14c.171 0 .328-.091.407-.238.731-1.346 2.702-2.251 4.905-2.251.37 0 .74.026 1.103.077.022.004.069.005.07.005.254 0 .478-.185.46-.445-.003-.039-.385-3.445-.385-3.445z"></path>
+            <path d="M17.53 3.081L9.331.09a.472.472 0 0 0-.323 0L.79 3.089a.446.446 0 0 0-.297.417V8.92h1.03V4.174l7.485 2.732a.472.472 0 0 0 .323 0l8.197-2.992a.446.446 0 0 0 .298-.416.446.446 0 0 0-.298-.417zM.003 12.457a.437.437 0 0 0 .115.344.466.466 0 0 0 .341.147h1.099c.13 0 .254-.053.341-.147a.436.436 0 0 0 .116-.345l-.3-2.76H.302l-.3 2.76z"></path>
+          </g>
+        </svg>
+      </div>
+      <div class="leftnav_text">
+        <select id="leftnav_select">
+          <option value="class1">CLASS 1</option>
+          <option value="class2">CLASS 2</option>
+          <option value="class3">CLASS 3</option>
+          <option value="class4">CLASS 4</option>
+          <option value="class5">CLASS 5</option>
+          <option value="class6">CLASS 6</option>
+          <option value="class7">CLASS 7</option>
+          <option value="class8">CLASS 8</option>
+          <option value="class9">CLASS 9</option>
+          <option value="class10">CLASS 10</option>
+        </select>
+      </div>
+    </div>
+    <div class="leftnav_content1">
+      <ul class="unstyled centered">
+        <li>
+          <input class="styled-checkbox" id="styled-checkbox-1" type="checkbox" value="value1">
+          <label for="styled-checkbox-1">Checkbox</label>
+        </li>
+        <li>
+          <input class="styled-checkbox" id="styled-checkbox-2" type="checkbox" value="value2" checked>
+          <label for="styled-checkbox-2">CSS Only</label>
+        </li>
+        <li>
+          <input class="styled-checkbox" id="styled-checkbox-3" type="checkbox" value="value3" disabled>
+          <label for="styled-checkbox-3">A disabled checkbox</label>
+        </li>
+        <li>
+          <input class="styled-checkbox" id="styled-checkbox-4" type="checkbox" value="value4">
+          <label for="styled-checkbox-4">Fourth option</label>
+        </li>
+      </ul>
+    </div>
+  </div>
   <div class="right_nav">Right navigation</div>
 </div>
