--- a/StudentArchitect/src/app/class/class.component.css
+++ b/StudentArchitect/src/app/class/class.component.css
@@ -15,12 +15,51 @@
 .right_nav{
 position: relative;
 min-height: 100%;
-min-width: 100%;
+min-width: calc(100vw - 152px);
 overflow-y: auto;
-padding: 60px 80px;
+padding: 80px 150px;
+}
+
+.sub-container-bg {
+    background-image: linear-gradient(-180deg,#00d2ff,#0c4a83 79%,#0a336c)!important;
 }
 
 .subject-grid{
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
+    line-height: 1;
+}
+
+.subject{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: -1px 0px 0px rgba(0, 0, 0, 0.06);
+    height: 200px;
+    padding: 10px;
+    border-radius: 6px;
+    background: #fff;
+    margin: 10px 10px 10px 10px;
+}
+
+.subject-icon {
+    display: flex;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    box-shadow: 0 0 3px 0 rgba(0,0,0,.08);
+    justify-content: center;
+    align-items: center;
+}
+
+.icon-bg-yellow {
+    background: #f1c05b;
+}
+
+.subject-name {
+    margin-top: 18px;
+    font-weight: 600;
+    color: #2d2d2d;
+    font-size: 20px;
 }
