Added separator in css file between Left and Right nav

--- a/StudentArchitect/src/app/class/class.component.css
+++ b/StudentArchitect/src/app/class/class.component.css
@@ -6,6 +6,8 @@
     background: whitesmoke;
 }
 
+/* ********************************* LEFT NAV CSS Start ********************************* */
+
 .left_nav{
     display: flex;
     flex-direction: column;
@@ -14,14 +16,6 @@
     min-width: 200px;
     border-right: solid;
     align-items: flex-start;
-}
-
-.right_nav{
-position: relative;
-min-height: 100%;
-min-width: calc(100vw - 152px);
-overflow-y: auto;
-padding: 80px 150px;
 }
 
 .leftnav_content {
@@ -106,8 +100,18 @@ padding: 80px 150px;
     text-align: center;
     color: #4571ec;
   }
-  
+  /* ********************************* LEFT NAV CSS End ********************************* */
 
+ /* ********************************* RIGHT NAV CSS Start ********************************* */
+
+  .right_nav{
+    position: relative;
+    min-height: 100%;
+    min-width: calc(100vw - 152px);
+    overflow-y: auto;
+    padding: 80px 150px;
+    }
+    
 
 .sub-container-bg {
     background-image: linear-gradient(-180deg,#00d2ff,#0c4a83 79%,#0a336c)!important;
@@ -152,3 +156,7 @@ padding: 80px 150px;
     color: #2d2d2d;
     font-size: 20px;
 }
+
+
+/* ********************************* RIGHT NAV CSS End ********************************* */
+
