--- a/StudentArchitect/src/app/class/class.component.css
+++ b/StudentArchitect/src/app/class/class.component.css
@@ -16,6 +16,7 @@
     min-width: 200px;
     border-right: solid;
     align-items: flex-start;
+    background-color: black
 }
 
 .leftnav_content {
@@ -32,23 +33,41 @@
     background-color: #55bbea;
 }
 
+.leftnav_select{
+  min-width: 90px;
+}
+
+.leftnav_content_subject {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  /* align-items: center; */
+}
+
+.subject_icons {
+display: flex;
+align-items: center;
+}
+
+.subject_checkbox {
+  margin-left: 15px;
+}
 /* For Styled Check-boxes */
 .styled-checkbox {
-    position: absolute;
+    /* position: absolute; */
     opacity: 0;
   }
   .styled-checkbox + label {
     position: relative;
     cursor: pointer;
-    padding: 0;
   }
   .styled-checkbox + label:before {
     content: "";
     margin-right: 10px;
     display: inline-block;
     vertical-align: text-top;
-    width: 20px;
-    height: 20px;
+    width: 18px;
+    height: 18px;
     background: white;
   }
   .styled-checkbox:hover + label:before {
@@ -82,18 +101,8 @@
   }
 
   .unstyled {
-    margin: 0;
     padding: 0;
     list-style-type: none;
-  }
-  
-  li {
-    margin: 20px 0;
-  }
-  
-  .centered {
-    width: 300px;
-    margin: auto;
   }
   
   .title {
