left nav bg css

--- a/StudentArchitect/src/app/class/class.component.css
+++ b/StudentArchitect/src/app/class/class.component.css
@@ -16,7 +16,7 @@
     min-width: 200px;
     border-right: solid;
     align-items: flex-start;
-    background-color: black
+    background-color: #234b6d;
 }
 
 .leftnav_content {
