--- a/StudentArchitect/src/app/class/class.component.css
+++ b/StudentArchitect/src/app/class/class.component.css
@@ -143,6 +143,7 @@ align-items: center;
     border-radius: 6px;
     background: #fff;
     margin: 10px 10px 10px 10px;
+    cursor: pointer;
 }
 
 .subject-icon {
