--- a/StudentArchitect/src/app/class/class.component.css
+++ b/StudentArchitect/src/app/class/class.component.css
@@ -116,9 +116,9 @@ align-items: center;
   .right_nav{
     position: relative;
     min-height: 100%;
-    min-width: calc(100vw - 152px);
+    min-width: calc(100vw - 200px);
     overflow-y: auto;
-    padding: 80px 270px;
+    padding: 80px 270px 10px 270px;
     }
     
 
